# django_5_by_example

./: .gitignore  README.md  pyproject.toml
blog/: feeds.py  models.py  urls.py  views.py
blog/templates/: pagination.html
blog/templates/blog/: base.html
blog/templates/blog/post/: list.html  search.html  share.html
blog/templatetags/: blog_tags.py
mysite/: settings.py
mysite/blog/: models.py  urls.py  views.py
mysite/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_taggs.py  0005_rename_taggs_post_tags.py
mysite/blog/post/: list.html
mysite/blog/templates/blog/: base.html
mysite/blog/templates/blog/post/: comment.html  detail.html  list.html
mysite/mysite/: settings.py  urls.py
