[tool.poetry]
name = "django-5-by-example"
version = "0.1.0"
description = "\"Django 5 by example\" is a book written by Antonio Melé. Rodrigo Farah as a student."
authors = ["Rodrigo Farah <digofarah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
python-decouple = "^3.8"
django-taggit = "^5.0.1"
markdown = "^3.6"
psycopg2-binary = "^2.9.9"
mypy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
select = [
    "E",
    "F",
    "W",
    "DJ"
]